[tool.poetry]
name = "agent-codoc"
version = "0.1.0"
description = "Agent CoDoc is a conversational agent which answers documentation related questions using a RAG based system for context retrieval from documentation. It validates and corrects any code snippets before responding with them."
authors = ["sajan-gohil <sajangohil9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.41.1"
langchain = "^0.3.14"
openai = "^1.59.6"
langchain-openai = "^0.3.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.14"
sqlite-vss = "^0.1.2"
langchain-text-splitters = "^0.3.5"
sqlite-vec = "^0.1.6"
markdown = "^3.7"
tavily-python = "^0.7.5"
beautifulsoup4 = "^4.13.4"
PyPDF2 = "^3.0.1"
langgraph = "^0.4.8"
langgraph-cli = "^0.3.1"
langgraph-sdk = "^0.1.70"
langgraph-api = "^0.2.48"
sqlite-utils = "^3.38"
sqlite-utils-sqlite-vec = "^0.1.6"
langchain-tavily = "^0.2.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
